# polish-text-normalizer

./: .gitignore  README.md  currency_pl.py  dates_pl.py  num2words_pl.py  phone_numbers_pl.py  polish_text_normalizer.py  polish_tts.py  pyproject.toml  ranges_pl.py  test_abbreviations.py  test_currency.py  test_dates.py  test_emails_urls.py  test_normalizer_integration.py  test_num2words.py  test_phone_numbers.py  test_ranges.py  test_roman_numerals.py  test_special_chars.py  test_split.py  test_time.py
examples/: tts_coqui.py
src/polish_text_normalizer/: __init__.py  abbreviations_pl.py  currency_pl.py  dates_pl.py  emails_urls_pl.py  num2words_pl.py  phone_numbers_pl.py  polish_text_normalizer.py  ranges_pl.py  roman_numerals_pl.py  special_chars_pl.py  time_pl.py
tests/: test_abbreviations.py  test_currency.py  test_dates.py  test_emails_urls.py  test_normalizer_integration.py  test_num2words.py  test_phone_numbers.py  test_ranges.py  test_roman_numerals.py  test_special_chars.py  test_time.py
