[tool.poetry]
name = "polish-text-normalizer"
version = "1.0.0"
description = "Polish text normalizer — expands numbers, currencies, dates, abbreviations, and more into spoken Polish for TTS preprocessing."
readme = "README.md"
license = "MIT"
authors = ["Clawdia Szczypiec"]
keywords = ["polish", "text", "normalizer", "tts", "nlp", "preprocessing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Polish",
]
packages = [{ include = "polish_text_normalizer", from = "src" }]

[tool.poetry.urls]
Repository = "https://github.com/DrMikeMaik/polish-text-normalizer"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Core dependencies (minimal)
# (none currently needed for the regex-based normalization logic)

# TTS Extra (Local inference stack)
coqui-tts = { version = ">=0.27", optional = true }
soundfile = { version = "*", optional = true }
numpy = { version = "*", optional = true }
torch = { version = ">=2.0,<3", optional = true }
torchaudio = { version = ">=2.0,<3", optional = true }
transformers = { version = "<5", optional = true }
torchcodec = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
tts = [
    "coqui-tts",
    "soundfile",
    "numpy",
    "torch",
    "torchaudio",
    "transformers",
    "torchcodec"
]

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
